--- a/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/CreateOrEdit.cshtml
@@ -50,7 +50,22 @@
                                                 <span asp-validation-for="Name" class="text-danger"></span>
                                             </div>
                                         </div>
-                                      
+                                        <div class="col-md-6 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="Fk_Season" class="form-label"></label>
+                                                <select asp-for="Fk_Season" class="select2 form-select" asp-items="@(new SelectList(ViewData["Season"] as Dictionary<string,string>,"Key","Value"))">
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="Fk_GameWeak" class="form-label"></label>
+                                                <select asp-for="Fk_GameWeak" class="select2 form-select" asp-items="@(new SelectList(ViewData["GameWeak"] as Dictionary<string,string>,"Key","Value"))">
+                                                    <option value="0">@Localizer.Get("Not Specific")</option>
+                                                </select>
+                                                <span asp-validation-for="Fk_GameWeak" class="text-danger"></span>
+                                            </div>
+                                        </div>
 
                                     </div>
 
@@ -76,3 +91,16 @@
 
     </div>
 </div>
+@section scripts
+    {
+    <script src="~/apis/site.js"></script>
+    <script>
+        $(document).ready(function () {
+
+            $("#Fk_Season").on("change", function () {
+                getGameWeak($("#Fk_GameWeak"), $(this).val(), false);
+            });
+        });
+    </script>
+}
+
