--- a/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/Details.cshtml
+++ b/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/Details.cshtml
@@ -33,6 +33,9 @@
                 <dd class="col-sm-8 mb-1">@Model.UniqueCode</dd>
 
 
+                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.GameWeak):</dt>
+                <dd class="col-sm-8 mb-1">@(Model.GameWeak != null ? Model.GameWeak.Name : "-")</dd>
+
             </dl>
         </div>
 
