--- a/Dashboard/Areas/PlayerScoreEntity/Views/ScoreType/Details.cshtml
+++ b/Dashboard/Areas/PlayerScoreEntity/Views/ScoreType/Details.cshtml
@@ -33,6 +33,9 @@
 
                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.IsEvent):</dt>
                 <dd class="col-sm-8 mb-1">@(Model.IsEvent ? Localizer.Get("Yes") : Localizer.Get("No"))</dd>
+
+                <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.IsCanNotEdit):</dt>
+                <dd class="col-sm-8 mb-1">@(Model.IsCanNotEdit ? Localizer.Get("Yes") : Localizer.Get("No"))</dd>
             </dl>
         </div>
 
