--- a/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/Index.cshtml
+++ b/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/Index.cshtml
@@ -108,7 +108,7 @@
 @section scripts{
     <script src="~/apis/charts.js"></script>
     <script>
-        
+
         function LoadTable() {
             var dt_ajax_table = $('.datatables');
             if (dt_ajax_table.length) {
@@ -120,7 +120,7 @@
                         contentType: "application/json",
                         dataType: "json",
                         data: function(data) {
-                          
+
                             return JSON.stringify(data);
                         }
                     },
@@ -130,15 +130,16 @@
                         {data:"name"},
                         {data:"memberCount"},
                         {
-                            data: "gameWeak", orderable: false, render: function (data) {
-                                if (data != null && data.length > 0) {
+                            data: "gameWeak",
+                            render: function (data) {
+                                if (data != null) {
                                     return data.name;
                                 }
-
-                                return '@Localizer.Get("Not Found")';
+                                else {
+                                    return '@Localizer.Get("Not Found")';
+                                }
                             }
                         },
-
                         { data: "createdAt" },
                         { data: "id" },
                     ]
@@ -161,7 +162,7 @@
 
         $(document).ready(function() {
             LoadTable();
-         
+
         });
     </script>
 }
