--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
@@ -141,6 +141,7 @@
                                         <th>@Localizer.Get("Ranking")</th>
                                         <th>@Localizer.Get("TotalPoints")</th>
                                         <th>@Localizer.Get("PlayerGameWeakScore")</th>
+                                        <th>@Localizer.Get("Statistics")</th>
                                         <th>@Localizer.Get("PlayerGameWeakScoreState")</th>
                                     </tr>
                                     </thead>
@@ -156,6 +157,11 @@
                                             <td>
                                                 <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/ScoreDetails?fk_Player=@item.Player.Id&fk_TeamGameWeak=@Model.Id">
                                                     @Localizer.Get("Click to View")
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/AddScore?fk_Team=@Model.Fk_Home&fk_PlayerGameWeak=@Model.Id">
+                                                    @Localizer.Get("Add statistics")
                                                 </a>
                                             </td>
                                             <td>
